--- a/url-shortner/src/main/resources/templates/layout/main.html
+++ b/url-shortner/src/main/resources/templates/layout/main.html
@@ -23,7 +23,7 @@
     </ul>
 </nav>
 
-<main id="content" layout:fragment="content">MAIN</main>
+<main id="content" class="p-3" layout:fragment="content">MAIN</main>
 
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"></script>
